[package]
name = "gfaffix"
version = "0.1.5"
authors = ["Daniel Doerr <daniel.doerr@hhu.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap        = {version = "4.3", features = [ "derive" ] }
gfa         = "0.10.1"
handlegraph = "0.7.0-alpha.9"
indexmap    = "2.2.6"
rayon       = "1"
regex       = "1"
rustc-hash  = "2"

# Logging and error management
log        = "0.4"
env_logger = "0.10"

[profile.release]
debug = true
