[package]
name = "gfaffix"
version = "0.2.0"
authors = ["Daniel Doerr <daniel.doerr@hhu.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap        = { version = "4.5", features = ["derive", "wrap_help", "cargo"] }
gfa         = "0.10.1"
handlegraph = "0.7.0-alpha.9"
indexmap    = "2.7"
rayon       = "1.10"
regex       = "1"
rustc-hash  = "2"

# Logging and error management
log        = "0.4"
env_logger = "0.11"

[profile.release]
debug = true
